# prior_clustering

./: .gitignore  README.md
Project/: CMakeLists.txt  main.cpp
Project/classes/header/: TwoApproxTwoCenter.h  point.h  testdata.h  twoMeans.h  util.h
Project/classes/source/: TwoApproxTwoCenter.cpp  dummy.cpp  point.cpp  testdata.cpp  twoMeans.cpp  util.cpp
